--- a/app/views/themes/new.html.slim
+++ b/app/views/themes/new.html.slim
@@ -3,17 +3,4 @@ h1 感想の新規登録です
 .nav.justify-content-end
   = link_to '一覧', themes_path, class: 'nav-link'
 
-= form_with model: @theme, local: true do |f|
-  .form-group 
-     = f.label :name
-     = f.text_field :name, class: 'form-control', id: 'theme_name'
-  .form-gruop
-    = f.label :description
-    = f.text_area :description, row: 12, class: 'form-control', id: 'theme_description'
-  .form-group 
-    = f.label :chracter
-    = f.text_field :character, class: 'form-control', id: 'theme_character'
-  .form-group 
-    = f.label :bestscene
-    = f.text_field :bestscene, class: 'form-control', id: 'theme_bestscene' 
-  = f.submit nil, class: 'btn btn-success'
+= render partial: 'form', locals: { theme: @theme }
